--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.10.1",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
+    "theme-change": "^2.5.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
