--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
     "@pinia/nuxt": "^0.10.1",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
+    "postcss-import": "16.1.0",
     "theme-change": "^2.5.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "daisyui": "^5.0.9",
+    "autoprefixer": "10.4.16",
+    "daisyui": "3.9.4",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "3.3.5"
   }
 }
