--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.10.1",
+    "@tailwindcss/vite": "^4.1.3",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "postcss-import": "16.1.0",
@@ -20,9 +21,11 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.16",
-    "daisyui": "3.9.4",
+    "@nuxtjs/tailwindcss": "^6.13.2",
+    "@tailwindcss/postcss": "^4.1.3",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.19",
     "postcss": "^8.5.3",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "^4.1.3"
   }
 }
