--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.18.6",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/language": "^6.11.0",
+    "@codemirror/search": "^6.5.10",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.36.5",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.1.3",
+    "codemirror": "^6.0.1",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "postcss-import": "16.1.0",
     "theme-change": "^2.5.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-codemirror": "^6.1.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
